--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,17 @@
 		<url>git@github.com:trivago/triava.git</url>
 	</scm>
 
+<distributionManagement>
+  <snapshotRepository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+  </snapshotRepository>
+  <repository>
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+  </repository>
+</distributionManagement>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -69,7 +80,23 @@
 
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-gpg-plugin</artifactId>
+      <version>1.5</version>
+      <executions>
+        <execution>
+          <id>sign-artifacts</id>
+          <phase>verify</phase>
+          <goals>
+            <goal>sign</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-source-plugin</artifactId>
+       <version>2.2.1</version>
       <executions>
         <execution>
           <id>attach-sources</id>
@@ -83,6 +110,7 @@
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-javadoc-plugin</artifactId>
+       <version>2.9.1</version>
       <executions>
         <execution>
           <id>attach-javadocs</id>
