--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> <groupId>javax.cache</groupId> <artifactId>cache-api</artifactId> 
-			<version>1.0.0</version> </dependency> -->
+
+		<dependency>
+			<groupId>javax.cache</groupId>
+			<artifactId>cache-api</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
