--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.trivago</groupId>
 	<artifactId>triava</artifactId>
 	<packaging>jar</packaging>
-	<version>0.9.9-RC4</version>
+	<version>0.9.9</version>
 	<name>triava</name>
 	<url>https://github.com/trivago/triava</url>
 	<description>The triava project contains several of trivago's core libraries for Java-based projects: caching, collections, annotations, concurrency libraries and more. </description>
